# SN_Docs-Management

./: Readme.md
doc_management/: Cargo.toml  Dockerfile  command
doc_management/src/: handlers.rs  main.rs  minio.rs
