[package]
name = "doc_management"
version = "0.1.0"
edition = "2021"


[dependencies]
rust-s3 = "0.27.0-rc4"
tokio = {version = "1.5.0", features = ["full"]}
actix-web = "4.0.1"
actix-rt = "2.7.0"
chrono = { version = "0.4.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
derive_more = "0.99.2"